--- a/Projects/VidJot/views/partials/_navbar.handlebars
+++ b/Projects/VidJot/views/partials/_navbar.handlebars
@@ -1,16 +1,25 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
    <div class="container-fluid">
-      <a class="navbar-brand" href="#">VidJot</a>
+      <a class="navbar-brand" href="/">VidJot</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse container-fluid" id="navbarNav">
          <ul class="navbar-nav">
             <li class="nav-item">
                <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" href="/about">About</a>
+            </li>
+         </ul>
+         <ul class="navbar-nav ms-auto">
+            <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Video Ideas</a>
+               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="/ideas">Ideas</a>
+                  <a class="dropdown-item" href="/ideas/add">Add Idea</a>
+               </div>
             </li>
          </ul>
       </div>
