--- a/Projects/VidJot/views/ideas/add.handlebars
+++ b/Projects/VidJot/views/ideas/add.handlebars
@@ -1,13 +1,18 @@
+{{#each errors}}
+   <div class="alert alert-danger">{{text}}</div>
+{{else}}
+{{/each}}
+
 <div class="card card-body">
    <h3>Video Idea</h3>
    <form action="/ideas" method="POST">
       <div class="form-group mb-3">
          <label class="form-label" for="title">Title</label>
-         <input class="form-control" type="text" name="title">
+         <input class="form-control" type="text" name="title" required>
       </div>
       <div class="form-group mb-3">
          <label class="form-label" for="details">Details</label>
-         <textarea class="form-control" name="details" cols="30" rows="10"></textarea>
+         <textarea class="form-control" name="details" cols="30" rows="10" required></textarea>
       </div>
       <div class="d-grid gap-3">
          <button class="btn btn-primary btn-lg" type="submit">Submit</button>
