NodeJS, Express & MongoDB Dev to Deployment (Project Based Learning): VidJot App: Mongoose & Local MongoDB - Edit Video Ideas Form.

--- a/Projects/VidJot/views/index.handlebars
+++ b/Projects/VidJot/views/index.handlebars
@@ -2,6 +2,6 @@
    <div class="container-fluid py-5 text-center">
       <h1 class="display-3 fw-bold">{{ title }}</h1>
       <p class="fs-4 text-center">Jot down your ideas for your next YouTube videos.</p>
-      <button class="btn btn-dark btn-lg" type="button" href="/ideas/add">Add Video Idea</button>
+      <a class="btn btn-dark btn-lg" type="button" href="/ideas/add">Add Video Idea</a>
    </div>
 </div>
