--- a/Projects/VidJot/views/ideas/index.handlebars
+++ b/Projects/VidJot/views/ideas/index.handlebars
@@ -2,7 +2,11 @@
    <div class="card card-body mb-3">
       <h4>{{title}}</h4>
       <p>{{details}}</p>
-      <a class="btn btn-dark btn-block" href="/ideas/edit/{{_id}}">Edit</a>
+      <a class="btn btn-dark btn-block mb-3" href="/ideas/edit/{{_id}}">Edit</a>
+      <form method="POST" action="/ideas/{{_id}}?_method=DELETE">
+        <input type="hidden" name="_method" value="DELETE">
+        <input class="form-control btn btn-danger btn-block" type="submit" value="Delete">
+      </form>
    </div>
 {{else}}
    <p>No video ideas listed</p>
