NodeJS, Express & MongoDB Dev to Deployment (Project Based Learning): VidJot App: Local Authentication with Passport - Register & Login Pages.

--- a/Projects/VidJot/views/partials/_navbar.handlebars
+++ b/Projects/VidJot/views/partials/_navbar.handlebars
@@ -14,6 +14,12 @@
             </li>
          </ul>
          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+               <a class="nav-link" href="/users/register">Register</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="/users/login">Login</a>
+            </li>
             <li class="nav-item dropdown">
                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Video Ideas</a>
                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
