--- a/Projects/VidJot/views/users/register.handlebars
+++ b/Projects/VidJot/views/users/register.handlebars
@@ -3,22 +3,22 @@
       <div class="card card-body">
          <img class="logo" src="/img/logo.png" alt="VidJot Logo">
          <h3 class="text-center">Account Register</h3>
-         <form>
+         <form action="/users/register" method="POST">
             <div class="form-group mb-3">
                <label class="form-label" for="name">Name</label>
-               <input class="form-control" type="text" name="name" required>
+               <input class="form-control" type="text" name="name" required value="{{name}}">
             </div>
             <div class="form-group mb-3">
                <label class="form-label" for="email">Email</label>
-               <input class="form-control" type="email" name="email" required>
+               <input class="form-control" type="email" name="email" required value="{{email}}">
             </div>
             <div class="form-group mb-3">
                <label class="form-label" for="password">Password</label>
-               <input class="form-control" type="password" name="password" required>
+               <input class="form-control" type="password" name="password" required value="{{password}}">
             </div>
             <div class="form-group mb-3">
                <label class="form-label" for="confirmPassword">Confirm Password</label>
-               <input class="form-control" type="password" name="confirmPassword" required>
+               <input class="form-control" type="password" name="confirmPassword" required value="{{confirmPassword}}">
             </div>
             <div class="d-grid gap-3">
                <button class="btn btn-primary btn-lg" type="submit">Login</button>
