NodeJS, Express & MongoDB Dev to Deployment (Project Based Learning): VidJot App: Local Authentication with Passport - Hooking Up a Local Strategy for Passport.

--- a/Projects/VidJot/views/users/login.handlebars
+++ b/Projects/VidJot/views/users/login.handlebars
@@ -3,7 +3,7 @@
       <div class="card card-body">
          <img class="logo" src="/img/logo.png" alt="VidJot Logo">
          <h3 class="text-center">Account Login</h3>
-         <form>
+         <form action="/users/login" method="POST">
             <div class="form-group mb-3">
                <label class="form-label" for="email">Email</label>
                <input class="form-control" type="email" name="email" required>
