--- a/Projects/VidJot/views/users/register.handlebars
+++ b/Projects/VidJot/views/users/register.handlebars
@@ -21,7 +21,7 @@
                <input class="form-control" type="password" name="confirmPassword" required value="{{confirmPassword}}">
             </div>
             <div class="d-grid gap-3">
-               <button class="btn btn-primary btn-lg" type="submit">Login</button>
+               <button class="btn btn-primary btn-lg" type="submit">Register</button>
             </div>
          </form>
       </div>
