--- a/Projects/StoryBooks/views/layouts/main.handlebars
+++ b/Projects/StoryBooks/views/layouts/main.handlebars
@@ -9,9 +9,12 @@
       <title>StoryBooks</title>
    </head>
    <body>
-      <div class="container">
-         {{{ body }}}
-      </div>
+      {{> _header}}
+      <main>
+         <div class="container">
+            {{{ body }}}
+         </div>
+      </main>
 
       <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
