--- a/Projects/StoryBooks/views/index/welcome.handlebars
+++ b/Projects/StoryBooks/views/index/welcome.handlebars
@@ -1,4 +1,7 @@
 <h1>Welcome</h1>
 <p>Welcome to StoryBooks 1.0.0</p>
 <p>Post stories from the best and worst of your life and choose for them to be read by the world or completely private as your own personal diary.</p>
-<a class="btn red darken-1" href="/auth/google"><i class="fab fa-google left"></i> Login with Google</a>
+{{#if user}}
+{{else}}
+   <a class="btn red darken-1" href="/auth/google"><i class="fab fa-google white-text left"></i> Login with Google</a>
+{{/if}}
