NodeJS, Express & MongoDB Dev to Deployment (Project Based Learning): StoryBooks App: Creating UI - Add Button & Footer.

--- a/Projects/StoryBooks/views/partials/_header.handlebars
+++ b/Projects/StoryBooks/views/partials/_header.handlebars
@@ -1,7 +1,7 @@
 <nav class="grey darken-3">
    <div class="container">
       <div class="nav-wrapper">
-            <a class="brand-logo center" href="/stories">StoryBooks</a>
+            <a class="brand-logo center" href="/">StoryBooks</a>
             <a class="sidenav-trigger show-on-large" href="#" data-target="main-menu"><i class="fa fa-bars"></i></a>
 
             <!-- Right Nav -->
