--- a/Projects/StoryBooks/views/layouts/main.handlebars
+++ b/Projects/StoryBooks/views/layouts/main.handlebars
@@ -6,15 +6,20 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <script src="https://kit.fontawesome.com/457b469029.js" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="/css/style.css">
       <title>StoryBooks</title>
    </head>
    <body>
       {{> _header}}
+      {{#if user}}
+         {{> _add-btn}}
+      {{/if}}
       <main>
          <div class="container">
             {{{ body }}}
          </div>
       </main>
+      {{> _footer}}
 
       <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
