--- a/Projects/StoryBooks/views/layouts/main.handlebars
+++ b/Projects/StoryBooks/views/layouts/main.handlebars
@@ -23,9 +23,16 @@
 
       <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
+
       <script>
          $(document).ready(function(){
             $('.sidenav').sidenav();
+            $('select').formSelect();
+         });
+
+         CKEDITOR.replace('body', {
+            plugins: 'wysiwygarea,toolbar,basicstyles,link'
          });
       </script>
    </body>
