--- a/Projects/StoryBooks/views/stories/add.handlebars
+++ b/Projects/StoryBooks/views/stories/add.handlebars
@@ -1,1 +1,36 @@
 <h1>Add Story</h1>
+<div class="row">
+   <form class="col s12" action="/stories" method="POST">
+      <div class="row">
+         <div class="input-field">
+            <input type="text" name="title">
+            <label for="title">Title</label>
+         </div>
+      </div>
+      <div class="row">
+         <div class="input-field">
+            <select name="status">
+               <option value="public" selected>Public</option>
+               <option value="private">Private</option>
+               <option value="unpublished">Unpublished</option>
+            </select>
+            <label for="status">Status</label>
+         </div>
+      </div>
+      <div class="row">
+         <p>
+            <label>
+               <input id="filled-in-box" class="filled-in" type="checkbox" name="allowComments" checked="checked" />
+               <span>Allow Comments</span>
+            </label>
+         </p>
+      </div>
+      <div class="row">
+         <div class="input-field">
+            <h5>Tell Us Your Story:</h5>
+            <textarea name="body"></textarea>
+         </div>
+      </div>
+      <input class="btn" type="submit" value="Save">
+   </form>
+</div>
