--- a/Projects/StoryBooks/views/stories/show.handlebars
+++ b/Projects/StoryBooks/views/stories/show.handlebars
@@ -1,1 +1,22 @@
-<h1>Show Story</h1>
+<div class="row">
+   <div class="col s12 m8">
+      <h3>{{story.title}}</h3>
+      <div class="card story">
+         <div class="card-content">
+            <span class="card-title">{{formatDate story.date 'Do MMMM YYYY'}}</span>
+            {{{story.body}}}
+         </div>
+      </div>
+   </div>
+   <div class="col s12 m4">
+      <div class="card center-align">
+         <div class="card-content">
+            <span class="card-title">{{story.user.firstName}} {{story.user.lastname}}</span>
+            <img class="circle responsive-img" src="{{story.user.image}}">
+         </div>
+         <div class="card-action">
+            <a href="/stories/user/{{story.user.id}}">More From {{story.user.firstName}}</a>
+         </div>
+      </div>
+   </div>
+</div>
