--- a/Projects/StoryBooks/views/stories/edit.handlebars
+++ b/Projects/StoryBooks/views/stories/edit.handlebars
@@ -1,6 +1,7 @@
 <h1>Edit Story</h1>
 <div class="row">
-   <form class="col s12" action="/stories" method="POST">
+   <form class="col s12" action="/stories/{{story._id}}?_method=PUT" method="POST">
+      <input type="hidden" name="_method" value="PUT">
       <div class="row">
          <div class="input-field">
             <input type="text" name="title" value="{{story.title}}">
