--- a/Projects/StoryBooks/views/stories/show.handlebars
+++ b/Projects/StoryBooks/views/stories/show.handlebars
@@ -7,6 +7,24 @@
             {{{story.body}}}
          </div>
       </div>
+      {{#if story.allowComments}}
+         <div class="card">
+            <div class="card-content">
+               <span class="card-title">Comments</span>
+               {{#if user}}
+                  <form action="/stories/comment/{{story._id}}" method="POST">
+                     <div class="input-field">
+                        <textarea class="materialize-textarea" name="commentBody"></textarea>
+                        <label>Add Comment</label>
+                     </div>
+                     <input class="btn" type="submit" value="Submit">
+                  </form>
+               {{else}}
+                  <p>Please <a href="/auth/google">log in</a> to leave a comment</p>
+               {{/if}}
+            </div>
+         </div>
+      {{/if}}
    </div>
    <div class="col s12 m4">
       <div class="card center-align">
