--- a/Projects/StoryBooks/views/stories/show.handlebars
+++ b/Projects/StoryBooks/views/stories/show.handlebars
@@ -24,6 +24,19 @@
                {{/if}}
             </div>
          </div>
+         {{#each story.comments}}
+         <div class="card">
+            <div class="card-content">
+               <h5>{{commentBody}}</h5>
+               <div class="chip">
+                  <img src="{{commentUser.image}}">
+                  {{commentUser.firstName}} {{commentUser.lastName}}
+               </div>
+               <br>
+               <small>Posted: {{formatDate commentDate 'Do MMMM YYYY'}}</small>
+            </div>
+         </div>
+         {{/each}}
       {{/if}}
    </div>
    <div class="col s12 m4">
